Fix page overflow bug

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,12 +17,16 @@
 html {
   scroll-behavior: smooth;
   scroll-padding-top: 4.5rem;
+  max-width: 100%;
+  min-width: 100%;
 }
 body {
   font-family: var(--font-body);
   background-color: var(--color-primary-dark);
   color: var(--color-primary-light);
   box-sizing: border-box;
+  max-width: 100%;
+  min-width: 100%;
 }
 h2 {
   font-size: 2rem;
@@ -52,7 +56,7 @@ nav {
     /* border-bottom: 1px solid color-mix(in srgb, white 15%, transparent); */
   border-bottom: 1px solid
     color-mix(in srgb, var(--color-primary-dark) 40%, var(--color-secondary));
-  width: 100dvw;
+  width: 100%;
 }
 #navbar-brand {
   font-family: var(--font-display);
@@ -246,6 +250,7 @@ nav {
 main {
   background-color: var(--color-primary-light);
   color: var(--color-primary-dark);
+  width: 100%;
   & section {
     padding-bottom: 2rem;
     line-height: 1.5;
